Element_Project/src/objects/Related_Policy__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <description>Policies related case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Policies</relationshipLabel>
        <relationshipName>Related_Policies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <formula>Policy__r.Policy_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy</label>
        <referenceTo>Policy__c</referenceTo>
        <relationshipLabel>Related Policies</relationshipLabel>
        <relationshipName>Related_Policies</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Related Policy</label>
    <nameField>
        <displayFormat>Policy-{000000}</displayFormat>
        <label>Related Policies Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>